--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <ol>
         <li><a href="/90s/regret/regret.html">Regret</a></li>
         <li><a href="/90s/mywebsite/index.html">My Website</a></li>
-        <li><a href="/90s/ducks/Ducks.html">My Website</a></li>
+        <li><a href="/90s/ducks/Ducks.html">Ducks</a></li>
     </ol>
 </body>
 </html>
